# esp32-ups-mqtt

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: deploy-flasher.yml
docs/: index.html  manifest.json
docs/plans/: v0.4.0-nut-style-hid-refactor.md
docs/protocols/: nut-style-hid-refactor.md  ups-profile-table-design.md  ups-usb-hid-protocol-notes.md
main/: CMakeLists.txt  Kconfig.projbuild  apc_hid_parser.c  apc_hid_parser.h  hid_descriptor_parser.c  hid_descriptor_parser.h  http_server.c  http_server.h  idf_component.yml  main.c  mqtt_manager.c  mqtt_manager.h  nut_runtime_map.c  nut_runtime_map.h  ota_update.c  ota_update.h  power_event.c  power_event.h  ups_hid_map.c  ups_hid_map.h  ups_profile.h  usb_host_manager.c  usb_host_manager.h  wifi_manager.c  wifi_manager.h
tests/: test_hid_descriptor_parser.c  test_nut_runtime_map.c  test_power_event_logic.c
