idf_component_register(
    SRCS
        "main.c"
        "wifi_manager.c"
        "mqtt_manager.c"
        "power_event.c"
        "apc_hid_parser.c"
        "ups_hid_map.c"
        "hid_descriptor_parser.c"
        "nut_runtime_map.c"
        "usb_host_manager.c"
        "http_server.c"
        "ota_update.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        usb
    PRIV_REQUIRES
        mqtt
        esp_hid
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_http_server
        app_update
        mbedtls
)
